chore: Fixing deplyment errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,36 @@
 {
-    "rules": {
-      "prefer-const": "error",
-      "no-trailing-spaces": "error",
-      "no-multiple-empty-lines": ["error", { "max": 1 }],
-      "linebreak-style": ["error", "unix"]
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@next/next/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "prefer-const": "error",
+    "no-trailing-spaces": "error",
+    "no-multiple-empty-lines": ["error", { "max": 1 }],
+    "linebreak-style": ["error", "unix"]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
     }
   }
-  
+}
