--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.583.0",
-        "@next/codemod": "14.2.3",
-        "@sparticuz/chromium-min": "^123.0.1",
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/pro-solid-svg-icons": "^6.4.0",
-        "@fortawesome/react-fontawesome": "^0.2.0",        
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@next/codemod": "14.2.3",
+        "@sparticuz/chromium-min": "^123.0.1",
         "axios": "^1.7.2",
         "cheerio": "1.0.0-rc.12",
         "chroma-js": "^2.4.2",
@@ -48,9 +48,13 @@
         "@types/node": "^20.12.12",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^6.2.0",
+        "@typescript-eslint/parser": "^6.2.0",
         "autoprefixer": "^10.4.19",
-        "eslint": "^8.57.0",
-        "eslint-config-next": "14.1.4",
+        "eslint": "^8.35.0",
+        "eslint-config-next": "^14.1.4",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.4.5"
