--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "node-fetch": "^3.3.2",
         "path": "^0.12.7",
         "pdf-lib": "^1.17.1",
+        "prop-types": "^15.8.1",
         "puppeteer-core": "^22.10.0",
         "react": "^18.3.1",
         "react-color": "^2.19.3",
